--- a/assets/main.scss
+++ b/assets/main.scss
@@ -12,7 +12,7 @@ h1 {
   font-size: 4em;
   text-align: center;
   margin-top: 50px;
-  margin-bottom: 100px;
+  margin-bottom: 25px;
 }
 h2 {
   font-size: 3em;
@@ -21,4 +21,33 @@ h2 {
 h3 {
   font-size: 1.5em;
   margin-bottom: 150px;
+}
+
+p {
+  font-size: 1.2em;
+}
+
+#titlebox {
+  margin-bottom: 100px;
+}
+.site-footer {
+    border-top: 0;
+    margin-top: 100px;
+}
+
+span.whee {
+  position: absolute;
+  margin-left: -5px;
+  margin-top: -5px;
+  width: 100px;
+    -webkit-animation:spin 5s linear infinite;
+    -moz-animation:spin 5s linear infinite;
+    animation:spin 5s linear infinite;
+}
+@-moz-keyframes spin { 100% { -moz-transform: rotate(360deg); } }
+@-webkit-keyframes spin { 100% { -webkit-transform: rotate(360deg); } }
+@keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }
+
+span.clear {
+  margin-left: 100px;
 }
