updated the description line & tweaked CSS

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -35,6 +35,10 @@ p {
     margin-top: 100px;
 }
 
+.site-footer p {
+  font-size: 1em;
+}
+
 span.whee {
   position: absolute;
   margin-left: -5px;
