--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,4 +1,6 @@
 <head>
+  <title>It has been {{ site.data.trumps.poops[0].date | timeago }} since Trump's last 💩 | Trump Poop Watch</title>
+  <meta name="description" content="{{ site.description }}">
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
