switched timeago to the jquery plugin instead of jekyll plug

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,11 @@
 
     {% include footer.html %}
 
+<script>
+jQuery(document).ready(function() {
+  jQuery("time.timeago").timeago();
+});
+</script>
   </body>
 
 </html>
