--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,11 +1,13 @@
 <head>
-  <title>It has been {{ site.data.trumps.poops[0].date | timeago }} since Trump's last 💩 | Trump Poop Watch</title>
+  <title>Trump's last 💩 was on {{ site.data.trumps.poops[0].date | date: "%B %-d, %Y" }} | Trump Poop Watch</title>
   <meta name="description" content="{{ site.description }}">
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="{{ "assets/main.css" | relative_url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}" href="{{ "/feed.xml" | relative_url }}">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="assets/scripts/jquery.timeago.js" type="text/javascript"></script>
   <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-109589476-1"></script>
 <script>
