--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,6 +1,11 @@
 ---
 layout: default
 ---
+<div id="titlebox">
+<!-- <h1>{{ site.title }}</h1> -->
+<h1>Trump <span class="whee">💩</span><span class="clear">Watch</span></h1>
+<p>{{ site.description | escape }}</p>
+</div>
 
 <div class="home">
 
