full archive done

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <div id="titlebox">
 <!-- <h1>{{ site.title }}</h1> -->
-<h1>Trump <span class="whee">💩</span><span class="clear">Watch</span></h1>
+<h1>Trump <a href="/"><span class="whee">💩</span></a><span class="clear">Watch</span></h1>
 <p>{{ site.description | escape }}</p>
 </div>
 
