links to the code

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer class="site-footer">
 
-<p>a project by <a href="https://www.twitter.com/dansinker">Dan Sinker</a></p>
+<p>a project by <a href="https://www.twitter.com/dansinker">Dan Sinker</a> | the poopwatch is on <a href="https://github.com/sinker/trumppoopwatch.org">Github</a></p>
 
 </footer>
